<resources>
    <string name="app_name">FoodyPJ</string>
    <string name="version">Version</string>
    <string name="loading">Loading...</string>
    <string name="Company">Hieux2Hoang.java</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="dangnhapgoogle">Đăng nhập bằng google</string>
    <string name="dangnhapfacebook">Đăng nhập bằng facebook</string>
    <string name="title_activity_trang_chu_acivity">TrangChuAcivity</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="dangkymoi">Đăng ký mới</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="places">Places</string>
    <string name="food">Food</string>
    <string name="tabmoinhat">Mới nhất</string>
    <string name="tabdanhmuc">Danh mục</string>
    <string name="tabkhuvuc">Khu vực</string>
    <string name="ganday">Gần Đây</string>
    <string name="blogs">Blogs</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="topthanhvien">Top thành viên</string>
    <string name="dathang">Đặt món</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="damocua">Đã mở cửa</string>
    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>
</resources>