<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/a705180d40bbc16e69e437e4e6b8ebbe"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red_2027"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/foody" />

            <EditText
                android:id="@+id/edEmailDN"
                android:layout_width="306dp"
                android:layout_height="66dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edPasswordDN"
                android:layout_width="306dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/padlock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/matkhau"
                android:inputType="textPersonName|textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="221dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/white"
                android:text="@string/dangnhap"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/hoac"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/btnDangNhapGoogle"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:text="@string/dangnhapgoogle"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnDangNhapFacebook"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/dangnhapfacebook"
                app:com_facebook_login_text="@string/dangnhapfacebook"></com.facebook.login.widget.LoginButton>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>